Tue Sep  8 21:44:03 CDT 1998
	* default.xpm seta.xpm: Changed the images for png's for space reasons
Tue Aug 25 17:45:00 BST 1998 Michael Meeks <michael@imaginator.com>
	* mahjongg.c (load_callback): Fixed bug with duff pointers being
	retained after being freed.
	* mahjongg.c (set_backgnd_colour): (load_callback):
	(colour_changes_cb): (properties_callback):
	(create_mahjongg_board):
	Background colour setting, major mangle / creation of all these.
	* mahjongg.c (hint_callback): Added nicer prompt to the hint dialog.
	
Mon Aug 17 18:00:00 BST 1998 Michael Meeks <michael@imaginator.com>
	* Major code mangle.
	* Added extra map, renamed structures to acommodate
	* Updated preference menu to cope
	* Rewrote and documented structures
	* Improved and documented placement debugging
	* Added #warning on cheat
	* Improved placing algorithem to favor higher sites
	* Upped version to 0.5.0
	* Fixed C++ style comments
	* Padded 'Tiles Remaining' status to give less of a jump on decrement
	* Implemented 'hint' function
	* Updated Authors, and support mail address
	* Several of Ganesh' fixes:
	* Simplified check_free, it now works
	* Fixed restart, undo destroys map
	* Other useful feedback
	
1998-08-06  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* mahjongg.c (fill_menu): Allow more graphics formats to be used
	for the tiles. 

Mon Aug 3 04:33:57 BST 1998 Ganesh Sittampalam <ganesh.sittampalam@magd.ox.ac.uk>

	* Fixed bug that left a tile selected when you restarted the game
	* Got rid of the "No more movements" message when you won the game
	* Made it decrement the tiles left when you redo a step, rather than
	incrementing it.
	* Fixed bug that left multiple removals with the same sequence number after
	an undo followed by a different removal.

1998-07-25  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* mahjongg.desktop: Added Portuguese translation.

Fri Jun 12 11:56:33 EDT 1998 Gregory McLean <gregm@comstar.net>

	* Applied another patch from Michael Meeks to fix some