@@ -1,3 +1,8 @@
+1998-10-18  Tuomas Kuosmanen  <tigert@gimp.org>
+
+	* added gnome-mahjongg.png: mahjongg icon
+	* Makefile.am mahjongg.desktop: Added the icon to the .desktop -file
+
 Tue Sep  8 21:44:03 CDT 1998
 	* default.xpm seta.xpm: Changed the images for png's for space reasons
 Tue Aug 25 17:45:00 BST 1998 Michael Meeks <michael@imaginator.com>
